--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>EinfachGustaf.live</title>
-    <link rel="icon" type="image/x-icon" href="https://avatars.githubusercontent.com/u/122920991?s=200&v=4">
+    <title>Sono :D</title>
+    <link rel="icon" type="image/x-icon" href="https://skins.mcstats.com/face/4b12cee7-0917-4070-bfdf-9eada7e98e60">
     <!--CSS-->
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/header.css">
@@ -25,61 +25,34 @@
 </head>
 <body>
     <header>
-        <img src="https://avatars.githubusercontent.com/u/122920991?s=200&v=4" class="header-img">
+        <img src="https://skins.mcstats.com/face/4b12cee7-0917-4070-bfdf-9eada7e98e60" class="header-img">
         <div class="header-right">
-            <a href="https://www.youtube.com/@einfachgustaf?sub_confirmation=1" class="header-button" id="subscribe">Subscribe</a>
-            <a href="contact" class="header-button" id="contact-us">Contact us</a>
-            <a href="indev" class="header-button" id="contact-us">About us</a>
+            <a href="indev" class="header-button" id="subscribe">Sono Button</a>
+            <a href="contact" class="header-button" id="contact-us">Kontaktiere mich</a>
+            <a href="indev" class="header-button" id="contact-us">Über mich</a>
             <p class="change-theme material-symbols-outlined" onclick="changeTheme()" id="themeSwitcher">light_mode</p>
         </div>
     </header>
     <div class="top">
         <div class="top-text-wrapper">
-            <h1 class="top-title">EinfachGustaf.live</h1>
-            <p class="top-desc">EinfachGustaf's Community Server</p>
+            <h1 class="top-title">Sono</h1>
+            <p class="top-desc">ein Sono :D</p>
         </div>
     </div>
     <div class="features">
         <div class="feature-wrapper">
             <div class="feature hidden-l">
                 <p style="width:90%;" class="feature-txt">
-                Open-Source
-                </p>
-            </div>
-            <div class="feature hidden-r">
-                <p style="width:90%;" class="feature-txt">
-                Nah zur Community
-                </p>
-            </div>
-        </div>
-        <div class="feature-wrapper">
-            <div class="feature hidden-l">
-                <p style="width:90%;" class="feature-txt">
-                Modernes Backend
-                </p>
-            </div>
-            <div class="feature hidden-r">
-                <p style="width:90%;" class="feature-txt">
-                Einfach für jeden Spieler
+                Programmieren
                 </p>
             </div>
         </div>
     </div>
-    <div class="communicate-div">
-        <p class="communicate-title">Tausche dich mit anderen aus</p>
-        <iframe class="server-embed" src="https://discord.com/widget?id=1065307087724363796&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
-        <a href="https://discord.gg/qCZw9UeV7h"></a>
-    </div>
-    <div class="join" style="position: relative;">
-        <div class="custom-shape-divider-top-1691001879">
-            <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
-                <path d="M1200 0L0 0 598.97 114.72 1200 0z" class="shape-fill"></path>
-            </svg>
-        </div>
-        <h1 style="margin-bottom: 15vh;color: white;font-family: Geologica;font-size: 5vw;">Hast du Lust zu spielen?</h1>
+
+        <h1 style="margin-bottom: 15vh;color: white;font-family: Geologica;font-size: 5vw;">Hast du Lust mit mir zu spielen?</h1>
         <div class="domain-wrapper">
             <div class="domain-txt-wrapper">
-                <span>EinfachGustaf.live</span>
+                <span>node2.craftsblock.eu:25583</span>
             </div>
             <div class="sym-copy-wrapper" id="copy-field" onclick="copy(); copy_effect()">
                 <span class="material-symbols-outlined" onclick="copy(); copy_effect()" style="font-size: 32px;">content_copy</span>
@@ -88,16 +61,8 @@
     </div>
     <div class="footer">
         <div class="footer-links">
-            <a href="https://github.com/EinfachGustaf" style="float: left;text-decoration: none;color: #0051ff;">GitHub</a>
+            <a href="https://github.com/getSono" style="float: left;text-decoration: none;color: #0051ff;">GitHub</a>
             <a href="contact" style="float: right;text-decoration: none;color: #0051ff;">Contact us</a>
         </div>
-        <div class="footer-links">
-            <a href="https://github.com/EinfachGustaf/website" style="float: left;text-decoration: none;color: #0051ff;">Page Source</a>
-            <a href="https://discord.gg/qCZw9UeV7h" style="float: right;text-decoration: none;color: #0051ff;">Discord</a>
-        </div>
-        <div class="footer-copyright">
-            © Licensed under GNU GPL 3
-        </div>
-    </div>
 </body>
 </html>
