--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sono :D</title>
-    <link rel="favicon" type="image/x-icon" href="https://skins.mcstats.com/face/4b12cee7-0917-4070-bfdf-9eada7e98e60">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
     <!--CSS-->
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/header.css">
