--- a/indev/index.html
+++ b/indev/index.html
@@ -11,7 +11,7 @@
 <body>
     <h1 class="title">In development.</h1>
     <h2 class="info">Das gesuchte Feature ist noch nicht bereit!</h2>
-    <a href="https://einfachgustaf.live" style="text-decoration: none;margin-top: 8vh;">
+    <a href="https://sono.is-a.dev" style="text-decoration: none;margin-top: 8vh;">
         <div class="button">
             Homepage
         </div>
