--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sono</title>
-    <link rel="icon" type="image/x-icon" href="https://avatars.githubusercontent.com/u/122920991?s=200&v=4">
+    <link rel="icon" type="image/x-icon" href="https://skins.mcstats.com/face/4b12cee7-0917-4070-bfdf-9eada7e98e60?download=false">
     <!--CSS-->
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/header.css">
@@ -25,10 +25,10 @@
 </head>
 <body>
     <header>
-        <img src="https://avatars.githubusercontent.com/u/122920991?s=200&v=4" class="header-img">
+        <img src="https://skins.mcstats.com/face/4b12cee7-0917-4070-bfdf-9eada7e98e60?download=false" class="header-img">
         <div class="header-right">
-            <a href="https://www.youtube.com/@einfachgustaf?sub_confirmation=1" class="header-button" id="subscribe">Sono</a>
-            <a href="contact" class="header-button" id="contact-us">Contact</a>
+            <a href="indev" class="header-button" id="subscribe">Sono</a>
+            <a href="indev" class="header-button" id="contact-us">Contact</a>
             <a href="indev" class="header-button" id="contact-us">Abou</a>
             <p class="change-theme material-symbols-outlined" onclick="changeTheme()" id="themeSwitcher">light_mode</p>
         </div>
