--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
     </div>
     <div class="communicate-div">
         <p class="communicate-title">Tausche dich mit anderen aus</p>
-        <iframe class="server-embed" src="https://discord.com/widget?id=1065307087724363796&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
-        <a href="https://discord.gg/qCZw9UeV7h"></a>
+       <iframe src="https://discord.com/widget?id=1226146905688506398&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
+        <a href="https://discord.gg/cWwfWw4sRg"></a>
     </div>
     <div class="join" style="position: relative;">
         <div class="custom-shape-divider-top-1691001879">
@@ -79,7 +79,7 @@
         <h1 style="margin-bottom: 15vh;color: white;font-family: Geologica;font-size: 5vw;">Hast du Lust zu spielen?</h1>
         <div class="domain-wrapper">
             <div class="domain-txt-wrapper">
-                <span>EinfachGustaf.live</span>
+                <span>node2.craftsblock.eu:25583</span>
             </div>
             <div class="sym-copy-wrapper" id="copy-field" onclick="copy(); copy_effect()">
                 <span class="material-symbols-outlined" onclick="copy(); copy_effect()" style="font-size: 32px;">content_copy</span>
