--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
             </svg>
         </div>
         <h1 style="margin-bottom: 15vh;color: white;font-family: Geologica;font-size: 5vw;">Hast du Lust zu spielen?</h1>
+        <iframe src="https://api.mcstatus.io/v2/widget/java/node2.craftsblock.eu:25583"></iframe>
         <div class="domain-wrapper">
             <div class="domain-txt-wrapper">
                 <span>node2.craftsblock.eu:25583</span>
