--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <div class="top">
         <div class="top-text-wrapper">
             <h1 class="top-title">Sono</h1>
-            <p class="top-desc">ein Sono :D</p>
+            <a href="https://einfachgustaf.live" class="top-desc">selbst geklaut von EinfachGustaf.live!!!</p>
         </div>
     </div>
     <div class="features">
