--- a/index.html
+++ b/index.html
@@ -3,107 +3,68 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-<link rel="manifest" href="/site.webmanifest">
-<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
-<meta name="apple-mobile-web-app-title" content="Sono">
-<meta name="application-name" content="Sono">
-<meta name="msapplication-TileColor" content="#00aba9">
-<meta name="theme-color" content="#ffffff">
-    <title>Sono</title>
-    <!--CSS-->
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/header.css">
-    <link rel="stylesheet" href="css/screen.css">
-    <link rel="stylesheet" href="css/screen_header.css">
-    <link rel="stylesheet" href="css/animation.css">
-    <link rel="stylesheet" href="css/shapes.css">
-    <link rel="stylesheet" href="css/vars.css">
-    <link rel="stylesheet" href="css/scrollbar.css">
-    <!--Google Fonts Icons-->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0">
-    <!--Javascript-->
-    <script src="js/warn.js"></script>
-    <script src="js/animation.js"></script>
-    <script src="js/copy.js"></script>
-    <script src="js/copy-effect.js"></script>
-    <script src="js/change-theme.js"></script>
+    <title>Coming Soon</title>
+    <style>
+        body, html {
+            margin: 0;
+            padding: 0;
+            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+            line-height: 1.5;
+        }
+        header {
+            background-color: #000;
+            color: #fff;
+            padding: 1rem;
+            text-align: center;
+        }
+        .logo {
+            font-size: 1.5rem;
+            font-weight: bold;
+        }
+        .container {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            min-height: calc(100vh - 60px); /* Adjust for header height */
+            background: linear-gradient(to bottom, #f9fafb, #f3f4f6);
+            padding: 1rem;
+            text-align: center;
+        }
+        .content {
+            max-width: 28rem;
+            width: 100%;
+        }
+        h1 {
+            font-size: 2.25rem;
+            font-weight: bold;
+            color: #111827;
+            margin-bottom: 0.5rem;
+            opacity: 0;
+            animation: fadeIn 0.8s ease-out forwards;
+        }
+        p {
+            font-size: 1.25rem;
+            color: #4b5563;
+            margin-bottom: 2rem;
+            opacity: 0;
+            animation: fadeIn 0.8s ease-out 0.2s forwards;
+        }
+        @keyframes fadeIn {
+            from { opacity: 0; transform: translateY(10px); }
+            to { opacity: 1; transform: translateY(0); }
+        }
+    </style>
 </head>
 <body>
     <header>
-        <img src="https://skins.mcstats.com/face/4b12cee7-0917-4070-bfdf-9eada7e98e60?download=false" class="header-img">
-        <div class="header-right">
-            <a href="indev" class="header-button" id="subscribe">Sono</a>
-            <a href="indev" class="header-button" id="contact-us">Contact</a>
-            <a href="indev" class="header-button" id="contact-us">Abou</a>
-            <p class="change-theme material-symbols-outlined" onclick="changeTheme()" id="themeSwitcher">light_mode</p>
-        </div>
+        <div class="logo">Your Brand</div>
     </header>
-    <div class="top">
-        <div class="top-text-wrapper">
-            <h1 class="top-title">Sono</h1>
-            <a href="https://einfachgustaf.live" class="top-desc">selbst geklaut von EinfachGustaf.live!!!</p>
-        </div>
-    </div>
-    <div class="features">
-        <div class="feature-wrapper">
-            <div class="feature hidden-l">
-                <p style="width:90%;" class="feature-txt">
-                Open-source
-                </p>
-            </div>
-            <div class="feature hidden-r">
-                <p style="width:90%;" class="feature-txt">
-                Nah zur Community
-                </p>
-            </div>
-        </div>
-        <div class="feature-wrapper">
-            <div class="feature hidden-l">
-                <p style="width:90%;" class="feature-txt">
-               Blockbench
-                </p>
-            </div>
-            <div class="feature hidden-r">
-                <p style="width:90%;" class="feature-txt">
-                Programmieren am Limit
-                </p>
-            </div>
-        </div>
-    </div>
-    <div class="communicate-div">
-    </div>
-    <div class="join" style="position: relative;">
-        <div class="custom-shape-divider-top-1691001879">
-            <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
-                <path d="M1200 0L0 0 598.97 114.72 1200 0z" class="shape-fill"></path>
-            </svg>
-        </div>
-        <h1 style="margin-bottom: 15vh;color: white;font-family: Geologica;font-size: 5vw;">Hast du Lust zu spielen?</h1>
-        <iframe src="https://api.mcstatus.io/v2/widget/java/node2.craftsblock.eu:25583"></iframe>
-        <div class="domain-wrapper">
-            <div class="domain-txt-wrapper">
-                <span>node2.craftsblock.eu:25583</span>
-            </div>
-            <div class="sym-copy-wrapper" id="copy-field" onclick="copy(); copy_effect()">
-                <span class="material-symbols-outlined" onclick="copy(); copy_effect()" style="font-size: 32px;">content_copy</span>
-            </div>
-        </div>
-    </div>
-    <div class="footer">
-        <div class="footer-links">
-            <a href="https://github.com/getSono" style="float: left;text-decoration: none;color: #0051ff;">GitHub</a>
-            <a href="contact" style="float: right;text-decoration: none;color: #0051ff;">Contact us</a>
-        </div>
-        <div class="footer-links">
-            <a href="https://github.com/getSono/getSono-website" style="float: left;text-decoration: none;color: #0051ff;">Page Source</a>
-            <a href="https://discord.gg/qCZw9UeV7h" style="float: right;text-decoration: none;color: #0051ff;">Discord</a>
-        </div>
-        <div class="footer-copyright">
-            © Licensed under GNU GPL 3
-        </div>
+    <div class="container">
+        <main class="content">
+            <h1>Coming Soon</h1>
+            <p>We're working hard to bring you something amazing. Stay tuned!</p>
+        </main>
     </div>
 </body>
 </html>
