--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 </head>
 <body>
     <header>
-        <div class="logo">Your Brand</div>
+        <div class="logo">Sono Labs</div>
     </header>
     <div class="container">
         <main class="content">
