--- a/gamemodes.html
+++ b/gamemodes.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Epic Minecraft Server</title>
+    <title>Gamemodes - Epic Minecraft Server</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -33,27 +33,21 @@
     </header>
 
     <main>
-        <section class="hero">
-            <h1 data-lang="hero.title">Epic Minecraft Server</h1>
-            <p data-lang="hero.description">Join the adventure in our amazing Minecraft world!</p>
-            <button data-lang="hero.joinNow">Join Now</button>
-        </section>
-
-        <section class="features">
-            <div class="feature">
-                <img src="/placeholder.svg?height=50&width=50" alt="Gameplay">
-                <h2 data-lang="features.gameplay">Exciting Gameplay</h2>
-                <p data-lang="features.gameplayDesc">Experience thrilling adventures and creative building.</p>
-            </div>
-            <div class="feature">
-                <img src="/placeholder.svg?height=50&width=50" alt="Community">
-                <h2 data-lang="features.community">Friendly Community</h2>
-                <p data-lang="features.communityDesc">Join a welcoming community of Minecraft enthusiasts.</p>
-            </div>
-            <div class="feature">
-                <img src="/placeholder.svg?height=50&width=50" alt="Performance">
-                <h2 data-lang="features.performance">High Performance</h2>
-                <p data-lang="features.performanceDesc">Enjoy smooth gameplay with our optimized server infrastructure.</p>
+        <section class="gamemodes">
+            <h1 data-lang="gamemodes.title">Our Gamemodes</h1>
+            <div class="gamemode-list">
+                <div class="gamemode">
+                    <h2 data-lang="gamemodes.survival">Survival</h2>
+                    <p data-lang="gamemodes.survivalDesc">Classic Minecraft survival experience with a few twists.</p>
+                </div>
+                <div class="gamemode">
+                    <h2 data-lang="gamemodes.creative">Creative</h2>
+                    <p data-lang="gamemodes.creativeDesc">Unleash your creativity in our boundless creative world.</p>
+                </div>
+                <div class="gamemode">
+                    <h2 data-lang="gamemodes.minigames">Minigames</h2>
+                    <p data-lang="gamemodes.minigamesDesc">Enjoy a variety of exciting minigames with friends.</p>
+                </div>
             </div>
         </section>
     </main>
